2009-08-26  Nick Clifton  <nickc@redhat.com>

	* config/obj-coff-seh.c (seh_arm_write_pdata): Test for
	seh_ctx_root being NULL.

2009-08-24  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* Makefile.am (am__skiplex, am__skipyacc): New.
	* Makefile.in: Regenerate.

2009-08-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* Makefile.am (YFLAGS): Remove, not needed any more.
	(AM_CPPFLAGS): Renamed from ...
	(INCLUDES): ... this.
	* Makefile.in: Regenerate.

	* Makefile.am (AUTOMAKE_OPTIONS): Remove 1.8 cygnus, add 1.11,
	foreign and no-dist.
	(all): Remove now-unneeded dependency upon info.
	(DIST_SUBDIRS, MKDEP, DEP_INCLUDES, DEP_FLAGS, CLEANFILES)
	(DEP_FILE_DEPS): Remove variables.
	(OBJ_FORMAT_CFILES): Add config/obj-multi.c.
	(OBJ_FORMAT_HFILES): Add config/obj-multi.h.
	($(OBJS), ecoff.o): Remove now-unneeded manual dependencies.
	($(TARG_CPU_O), $(ATOF_TARG_O), obj-aout.o, obj-coff.o obj-ecoff.o)
	(obj-elf.o obj-evax.o, obj-fdpicelf.o, obj-multi.o, obj-som.o)
	(e-mipself.o, e-mipsecoff.o, e-i386aout.o, e-i386coff.o, e-i386elf.o)
	(e-crisaout.o, e-criself.o, tc-i386.o, xtensa-relax.o): Remove
	now-unneeded rules.
	(EXTRA_as_new_SOURCES): Add $(CFILES), $(HFILES), $(TARGET_CPU_CFILES),
	$(TARGET_CPU_HFILES), $(OBJ_FORMAT_CFILES), $(OBJ_FORMAT_HFILES),
	$(CONFIG_ATOF_CFILES), $(MULTI_CFILES), so their dependency fragments
	are picked up in the Makefile.
	(itbl-lex.c, itbl-ops.o): Remove manual dependencies.
	(m68k-parse.o, bfin-lex.o, itbl-lex.o, itbl-parse.o, itbl-tops.o)
	(itbl-test.o): Rewrite using automake-style dependency
	tracking rules; only list the dependency upon the primary source
	file, but no included headers.
	(DEP, DEP1, DEPTC, DEPOBJ, DEP2, dep.sed, dep, dep-in, dep-am):
	Remove.
	(mkdep section): Remove.
	* Makefile.in: Regenerate.
	* gas/po/POTFILES.in, gas/po/gas.pot: Regenerate.

	* Makefile.am (install-pdf, install-pdf-recursive, install-html)
	(install-html-recursive): Remove.
	* Makefile.in: Regenerate.